--- a/theme/strawberry/skin/latest/shop_basic/style.css
+++ b/theme/strawberry/skin/latest/shop_basic/style.css
@@ -7,5 +7,6 @@
 .lat li .fa-heart{color:#ff0000}
 .lat li .new_icon{display:inline-block;padding: 0 3px;line-height:14px ;font-size:0.833em;color:#fff;background:#c56bed}
 .lat li .cnt_cmt{color:#ff3970}
-.lat_title {display:block;;font-size:1.167em;float:left;width:100px}
+.lat_title h2{display:block;;font-size:20px;float:left;width:100px}
+.lat_title h2{display:block;;font-size:13px;float:left;width:100px}
 .lat_more {position:absolute;top:0;right:0;color:#878787;z-index:19}
