--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -54,13 +54,20 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 #sev .bx-prev {display: inline-block;position: absolute;top: 0;left: 0;width: 30px;height: 30px;margin-top: -40px;border: 1px solid #ddd;text-indent: -999px;overflow: hidden;background: url(img/btn_prev.png) no-repeat 50% 50% #fff;background-size: 20%;}
 #sev .bx-next {display: inline-block;position: absolute;top: 0;right: 0;width: 30px;height: 30px;margin-top: -40px;border: 1px solid #ddd;text-indent: -999px;overflow: hidden;background: url(img/btn_next.png) no-repeat 50% 50% #fff;background-size: 20%;}
 
+
+
+.main_wrap h1 {text-align:center;font-size:38px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;text-align:center}
+.main_wrap h2 {text-align:center;font-size:25px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;text-align:center}
+.main_wrap h3 {text-align:center;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;text-align:center;color: #f9bb00 ;}
+
+
 /* ##### maint.(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
 /* 공통 */
 .sct_wrap {margin:20px 0 ;zoom:1}
 .sct_wrap:after {display:block;visibility:hidden;clear:both;content:""}
 
 .sct_wrap h1 {text-align:center;font-size:30px;margin:10px 0 0 }
-.sct_wrap h2 {text-align:center;font-size:25px;margin:20px 0 0 }
+.sct_wrap h2 {text-align:center;font-size:25px;margin:20px 0 0 } 
 
 .sct {margin: 10px 0 ;padding:0;list-style:none;zoom:1;clear:both;}
 .sct:after {display:block;visibility:hidden;clear:both;content:""}
