--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -88,11 +88,12 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .mli_btn button.mli_pre{position:absolute;top:0;left:10px}
 .mli_btn button.mli_next{background-position: -33px 0;position:absolute;top:0;right:10px}
 
-.sct_icon .shop_icon_1 {display:inline-block;background:#e8f8f9;padding: 0 5px;color:#08b6ff;line-height:20px;margin-right:2px;font-size:0.923em}   /* 히트 아이콘 */
-.sct_icon .shop_icon_2 {display:inline-block;background:#f9e8ed;padding: 0 5px;color:#ff0837;line-height:20px;margin-right:2px;font-size:0.923em}   /* 추천 아이콘 */
-.sct_icon .shop_icon_3 {display:inline-block;background:#e2e0f6;padding: 0 5px;color:#827ad3;line-height:20px;margin-right:2px;font-size:0.923em}  /* 최신 아이콘 */
-.sct_icon .shop_icon_4{display:inline-block;background:#e0f6e5;padding: 0 5px;color:#27b02e;line-height:20px;margin-right:2px;font-size:0.923em}  /* BEST 아이콘 */
-.sct_icon .shop_icon_5 {display:inline-block;background:#fff1e5;padding: 0 5px;color:#ff6f00;line-height:20px;margin-right:2px;font-size:0.923em} /* 할인 아이콘 */
+.shop_icon{display:inline-block;color:#fff;background:#a8aab1;line-height:20px;padding:0 5px;font-size:0.92em;margin:1px; }
+.shop_icon_1 {}     /* 히트 아이콘 */
+.shop_icon_2 {}     /* 추천 아이콘 */
+.shop_icon_3 {}     /* 최신 아이콘 */
+.shop_icon_4 {background:#ff7575}      /* BEST 아이콘 */
+.shop_icon_5 {}     /* 할인 아이콘 */
 .sct_icon .shop_icon_coupon{display:inline-block;background:#e7e0f6;padding: 0 5px;color:#9C27B0;line-height:20px;margin-right:2px;font-size:0.923em}
 
 /* 상품 목록 스킨 10 */
@@ -111,6 +112,33 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_10 .sct_cost h3 {display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red;}
 .sct_10 .sct_sns{margin:10px  0}
 .sct_10 .sct_icon {margin:5px 0 }
+
+
+
+.sct_10 .sct_icon1 {position:absolute;top:30px;left:10px;text-align:center}
+
+.sct_10 .sct_icon1 .icon {width: 50px;height: 25px;line-height: 25px; background: red;position: relative;display:block ;margin-bottom:20px;color:#fff;font-weight:bold}
+.sct_10 .sct_icon1 .icon:before {content: ""; position: absolute;top: -17px; left: 0;width: 0; height: 0;  border-left: 25px solid transparent;border-right: 25px solid transparent;border-bottom: 17px solid red;}
+.sct_10 .sct_icon1 .icon:after { content: ""; position: absolute; bottom: -17px; left: 0;  width: 0;height: 0; border-left: 25px solid transparent; border-right: 25px solid transparent;  border-top: 17px solid red;}
+
+.sct_10 .sct_icon1 .icon_sale{background:rgba(0,0,0,0.8);}
+.sct_10 .sct_icon1 .icon_sale:before{border-bottom: 17px solid rgba(0,0,0,0.8);}
+.sct_10 .sct_icon1 .icon_sale:after{border-top: 17px solid rgba(0,0,0,0.8);}
+
+.sct_10 .sct_icon1 .icon_new{background:rgba(95,40,255,0.8)}
+.sct_10 .sct_icon1 .icon_new:before{border-bottom: 17px solid rgba(95,40,255,0.8);}
+.sct_10 .sct_icon1 .icon_new:after{border-top: 17px solid rgba(95,40,255,0.8);}
+
+.sct_10 .sct_icon1 .icon_best{background:rgba(255,8,55,0.8)}
+.sct_10 .sct_icon1 .icon_best:before{border-bottom: 17px solid rgba(255,8,55,0.8);}
+.sct_10 .sct_icon1 .icon_best:after{border-top: 17px solid rgba(255,8,55,0.8);}
+.sct_10 .icon_rec {display:inline-block;background:#f9e8ed;padding: 0 5px;color:#ff0837;line-height:20px;margin-right:2px;font-size:0.923em}
+.sct_10 .icon_hit {display:inline-block;background:#e8f8f9;padding: 0 5px;color:#08b6ff;line-height:20px;margin-right:2px;font-size:0.923em}
+.sct_10 .icon_cp {display:inline-block;background:#e7e0f6;padding: 0 5px;color:#9C27B0;line-height:20px;margin-right:2px;font-size:0.923em}
+.sct_10 .icon_soldout {display:none; background:#ff0000;padding: 0 5px;color:#fff;line-height:18px;margin-right:2px;font-size:0.923em}
+
+
+
 
 .swiper-container { width: 100%; max-width: 1200px; }
 .swiper-slide {width: auto;}
