--- a/theme/strawberry/css/mobile_shop.css
+++ b/theme/strawberry/css/mobile_shop.css
@@ -129,7 +129,7 @@ box-shadow: 0 0 5px rgba(55,55,5,0.4);}
 /*메인 페이지 STORY */
 
 /* 카드 섹션 스타일 */
-.container {
+.container_card {
     justify-content: space-between;  /* 카드들 간의 간격을 동일하게 */
     flex-wrap: wrap;                 /* 화면이 작아질 때 자동으로 다음 줄로 넘어가게 함 */
     padding: 20px;
