--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -116,12 +116,32 @@ transition: all .2s ease-in-out;}
 #category .cate{line-height:20px;}
 #category .cate_li_1{float:left;text-align:left;width:20%;min-height:200px;border-left:1px solid #eee;padding:20px}
 #category .cate_li_1:nth-child(5n+1){clear:both;border-left:0}
-#category .cate_li_1_a{font-size:1.154em;margin-bottom:15px;display:block;font-weight:bold}
+#category .cate_li_1_a{display:block;padding:0 20px;font-weight:bold;font-size: 16px; color: #333; text-decoration:none;vertical-align:top;}
 #category .cate_li_2 {width:100%;float:none;;line-height:20px;;margin:0}
 #category .cate_li_2  a {color:#6d6d6d;display:block;}
 #category a:hover{color:#c92033}
 #category .close_btn{position:relative;font-weight: bold;font-size: 1.4em;border:0;background:transparent;width:100%;line-height: 20px; padding: 20px; text-align: left;font-weight: 700;border-bottom: 1px solid #ddd;}
-#category .close_btn i{position: absolute; font-size: 16px;top: 0;right: 0;text-align:center;line-height: 60px;color: #aaa; background: none;border: 0; width: 50px;}
+#category .close_btn1 {display: flex;               /* 플렉스 컨테이너로 설정 */
+    align-items: center;         /* 세로 가운데 정렬 */
+    justify-content: center;     /* 기본적으로 가운데 정렬 */
+    font-weight: bold;
+    font-size: 1.4em;
+    border: 0;
+    background: transparent;
+    width: 100%;
+    line-height: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #ddd;
+    position: relative;}
+
+#category .close_btn1 .center_text {
+flex-grow: 1; /* 중앙 텍스트를 가운데 정렬 */text-align: center;}    
+#category .close_btn i{position: absolute;
+    right: 20px;                 /* 오른쪽 끝에서 간격 조정 */
+    font-size: 16px;
+    color: #aaa;
+    background: none;
+    border: 0;}
 #category .close_btn i:hover{color:#000}
 
 
