--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -113,7 +113,12 @@ transition: all .2s ease-in-out;}
 #category{position:fixed;top:0;right:0;width:400px;background:#fff;;z-index:100;text-align:left; height:100%;
     -moz-box-shadow:  0px 2px 38px  rgba(0,0,0,0.2);
     -webkit-box-shadow:  0px 2px 38px  rgba(0,0,0,0.2);
-    box-shadow: 0px 2px 38px  rgba(0,0,0,0.2);}
+    box-shadow: 0px 2px 38px  rgba(0,0,0,0.2);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;}
+#category.show {opacity: 1; visibility: visible;
+    }
 #category h2{padding: 20px;line-height: 20px;font-size: 16px;border-bottom: 1px solid #efefef;}
 #category .ct_wr{}
 #category ul:after {display:block;visibility:hidden;clear:both;content:""}
