--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -113,12 +113,7 @@ transition: all .2s ease-in-out;}
 #category{position:fixed;top:0;right:0;width:400px;background:#fff;;z-index:100;text-align:left; height:100%;
     -moz-box-shadow:  0px 2px 38px  rgba(0,0,0,0.2);
     -webkit-box-shadow:  0px 2px 38px  rgba(0,0,0,0.2);
-    box-shadow: 0px 2px 38px  rgba(0,0,0,0.2);
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;}
-#category.show {opacity: 1; visibility: visible;
-    }
+    box-shadow: 0px 2px 38px  rgba(0,0,0,0.2);}
 #category h2{padding: 20px;line-height: 20px;font-size: 16px;border-bottom: 1px solid #efefef;}
 #category .ct_wr{}
 #category ul:after {display:block;visibility:hidden;clear:both;content:""}
@@ -169,7 +164,7 @@ border-color: transparent transparent transparent rgba(0,0,0,0.7);}
 #wrapper {z-index:5;position:relative;min-width:1200px;zoom:1}
 #wrapper:after {display:block;visibility:hidden;clear:both;content:""}
 #wrapper_title {margin:30px 20px ;font-size:1.667em;font-weight:bold}
-.container {position:relative;;min-height:500px;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
+.container {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
 #container:after {display:block;visibility:hidden;clear:both;content:""}
 .view-container #wrapper_title,.view-container #sct_location {display:none}
 
