--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -109,7 +109,7 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 
 /* ##### main(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
 /* 공통 */
-.sct_wrap {position:relative;margin:10px 0;zoom:1}
+.sct_wrap {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
 .sct_wrap .sctrl {position:absolute;top:0;right:0} /* 애니메이션 효과 사용 시 재생 정지 버튼 등 */
 .sct_wrap:after {display:block;visibility:hidden;clear:both;content:""}
 .sct_wrap header {margin:0 0 20px;zoom:1}
@@ -134,6 +134,16 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .shop_icon_5 {}     /* 할인 아이콘 */
 .shop_icon_soldout{display:inline-block;color:#ff0000;font-style:italic;font-weight:bold;margin:2px}
 .shop_icon_coupon{background:#59d495}
+
+
+/*카테고리 추천 상품*/
+.category-menu {display: flex;gap: 20px;justify-content: center;margin-bottom: 10px;}
+.category-menu button {padding: 12px 20px; border: none; background: none; color: #666;font-size: 16px;cursor: pointer;transition: color 0.3s, border-bottom 0.3s;}
+.category-menu button.active {color: #8dc63f; /* 초록색 글자 */border-bottom: 2px solid #8dc63f; /* 초록색 밑줄 */font-weight: bold;}
+.category-content {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1; display: none;}
+.category-content.active {display: block;}
+.styled-link {display: block;width: 1240px;height: 46px;margin: 20px auto 0px;background: #fff;border: 1px solid #eee;color: var(--font-black-color01);font-size: 15px;font-weight: 500;line-height: 44px;text-align: center;}
+
 
 /* 재생/정지/이전/다음 버튼 */
 .sctrl {margin:0;padding:0;list-style:none;zoom:1}
