--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -48,7 +48,7 @@ outline: none;
 .hd_pops_footer .hd_pops_close{background:#393939;position:absolute;top:0;right:0}
 
 /* 상단 레이아웃 */
-#hd {min-width:1200px;background:#ff0837}
+#hd {min-width:1200px;}
 #hd_h1 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #hd_qnb {border-bottom:1px solid #e9e9e9;background:#f2f5f9;zoom:1}
 #hd_qnb:after {display:block;visibility:hidden;clear:both;content:""}
@@ -57,14 +57,14 @@ outline: none;
 #hd_qnb a {letter-spacing:0}
 #hd_wrapper {position:relative;margin:0 auto;padding:20px 0;width:1200px;zoom:1}
 #hd_wrapper:after {display:block;visibility:hidden;clear:both;content:""}
-#logo {float:left;padding:10px 0 0}
+#logo {text-align:center;padding:10px 0 0}
 
-#hd_sch {position:absolute;top:60px;left:50%;width:430px;margin-left:-215px;background:#fff;border-radius:50px}
+#hd_sch {position:absolute;top:60px;left:85%;width:300px;margin-left:-150px;background:#eceae4;border-radius:50px}
 #hd_sch h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
-#hd_sch #sch_str {padding-left:20px;height:45px;background:transparent;border:0;width:380px;float:left;font-size:1.25em;vertical-align:top}
-#hd_sch #sch_submit {height:45px;border:0;background:transparent;border:0;border-left:0;color:#ff0837;width:50px;float:left;cursor:pointer;;font-size:18px;vertical-align:top}
+#hd_sch #sch_str {padding-left:15px;height:35px;background:transparent;border:0;width:250px;float:left;font-size:1.25em;vertical-align:top}
+#hd_sch #sch_submit {height:35px;border:0;background:transparent;border:0;border-left:0;color:#ff0837;width:45px;float:left;cursor:pointer;;font-size:18px;vertical-align:top}
 
-#hd_btn{float:right;margin-top:40px}
+#hd_btn{display:none; float:right;margin-top:40px}
 #hd_btn a{display:inline-block;text-align:center;width:50px;height:50px;border:0;vertical-align:top}
 #hd_btn .btn_cart .icon{margin-top:18px;position:relative;width:22px;line-height:19px;border:1px solid #fff;display:inline-block;border-radius:0 0 3px 3px;color:#fff;font-size:0.92em;  
 -webkit-transition: all .2s ease-in-out;
@@ -87,12 +87,12 @@ transition: all .2s ease-in-out;}
 #hd_btn .btn_user:hover .icon:before {background:#fff;}
 #hd_btn .btn_cart:hover .icon{background:#fff;color:#ff0837}
 
-#tnb {border-bottom:1px solid #d80029}
+#tnb {background: #eceae4;}
 #tnb h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #tnb ul {margin:0 auto;width:1200px;zoom:1}
 #tnb ul:after {display:block;visibility:hidden;clear:both;content:""}
 #tnb li {float:right;font-size:0.92em}
-#tnb a {display:inline-block;padding:0 10px;color:#fff;line-height:35px;}
+#tnb a {display:inline-block;padding:0 10px; line-height:35px;}
 #tnb .tnb_admin a{font-weight:bold}
 #tnb .tnb_left{float:left}
 #tnb .tnb_left a{padding:0 14px}
