--- a/theme/strawberry/css/mobile_shop.css
+++ b/theme/strawberry/css/mobile_shop.css
@@ -54,10 +54,31 @@ border: 1px solid #558ab7 !important;
 /* 상단 레이아웃 */
 #hd {position:fixed;top:0;left:0;width:100%;z-index:999;height:50px}
 #hd h1 {position:absolute;font-size:0;text-indent:-9999em;line-height:0;overflow:hidden}
-#hd_wr{position:relative;;padding:10px;background:#ff0837;
--webkit-box-shadow: 0 0 5px rgba(55,55,5,0.4);
--moz-box-shadow: 0 0 5px rgba(55,55,5,0.4);
-box-shadow: 0 0 5px rgba(55,55,5,0.4);}
+#hd_wr{position:relative;margin:0 auto;padding:10px 0;width:100%;zoom:1}
+
+
+/*상단 */
+#tnb {background: #eceae4;}  
+#tnb h3 {position: absolute;font-size: 0;line-height: 0;overflow: hidden;}
+#tnb ul {margin: 0 auto;width: 100%; /* 모바일에서는 너비를 100%로 설정 */zoom: 1;}
+#tnb ul:after {display: block;visibility: hidden;clear: both;content: "";}
+#tnb li {float: right;font-size: 0.92em;}
+#tnb a {display: inline-block;padding: 0 10px;line-height: 35px;}
+#tnb .tnb_admin a {font-weight: bold;}
+#tnb .tnb_left {float: left;}
+#tnb .tnb_left a {padding: 0 14px;}
+#tnb .tnb_community i {font-size: 15px;}
+#tnb .tnb_shop {background: #fff;font-weight: bold;}
+#tnb .tnb_shop:focus,#tnb .tnb_shop:hover {color: #333;border-bottom: 0;}
+#tnb .tnb_shop a {color: #d50c0c;border-bottom: 1px solid #fff;}
+
+
+#hd_sch {position:absolute;top:50px;right:0%;width:300px;background:#eceae4;border-radius:50px; }
+#hd_sch h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
+#hd_sch #sch_str {padding-left:15px;height:35px;background:transparent;border:0;width:250px;float:left;font-size:1.25em;vertical-align:top}
+#hd_sch #sch_submit {height:35px;border:0;background:transparent;border:0;border-left:0;color:#ff0837;width:45px;float:left;cursor:pointer;;font-size:18px;vertical-align:top}
+
+
 
 #hd #hd_btn button{height:50px;width:50px;border:0;background:0;font-size:16px;vertical-align:top;float:lef;color: #fff;}
 #hd #hd_btn a{display:inline-block;height:50px;line-height:50px;width:50px;border:0;background:0;text-align:center;font-size:16px;vertical-align:top;float:left;color: #fff;}
@@ -65,8 +86,8 @@ box-shadow: 0 0 5px rgba(55,55,5,0.4);}
 #btn_hdcate{position:absolute;top:0;left:0}
 #hd #hd_btn a{position:absolute;top:0;right:5px}
 #hd #btn_hdmy{position:absolute;top:0;right:45px}
-#hd #logo{text-align:center}
-#hd #logo img{height:auto;max-height:27px;width:auto}
+#hd #logo{text-align:left}
+#hd #logo img{height:auto;max-height:107px;width:auto}
 
 /*카테고리*/
 .menu {display:none;position:fixed;top:0;height:100%;;z-index:99999;-webkit-backface-visibility: hidden;width:100%}
@@ -100,13 +121,6 @@ box-shadow: 0 0 5px rgba(55,55,5,0.4);}
 #nav .nav_li i{font-size:18px;height:20px;color:#fff}
 #nav .nav_li button{border:0;background:none;color:#fff}
 #nav .nav_li .txt{display:block;line-height:20px;font-size:11px;color:#fff}
-
-#hd_sch {display:none;position:fixed;bottom:55px;left:0;width:100%;z-index:60;background:#fff;padding:20px;border-top: 1px solid #e5e5e5;box-shadow: 0 -5px 5px rgba(0,0,0,0.06);}
-#hd_sch h2 {font-size:1.25em;margin-bottom:10px}
-#hd_sch .sch_inner {position:relative;}
-#hd_sch #sch_str {border:0;width:100%;height:45px;background:#f3f3f3;border-radius:5px;;padding-left:10px;padding-left:45px;color:#000}
-#hd_sch .sch_submit {position:absolute;bottom:0;left:0;width:40px;height:45px;;border:0;border-radius:0 3px 3px 0;cursor:pointer;background:none;font-size:15px;color:#333}
-#hd_sch .btn_close{position:absolute;top:0;right:0;width:50px;height:50px;background:none;border:0;color:#ccc;font-size:15px}
 
 #ppl_word{margin:20px 0 0;padding-top:20px;border-top:1px solid #f3f3f3}
 #ppl_word ol, #ppl_word li{padding:0;margin:0;list-style:none;}
