--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -37,7 +37,7 @@
 #stv .li_empty{text-align:center;padding:50px 0;color:#666;}
 #stv .btn_close{position:absolute;top:0;right:0;width:50px;height:50px;background:none;border:0;color:#ccc;font-size:15px}
 /*메인배너*/
-#main_bn{padding:80px 0; margin: 0 auto; max-width: 1200px; position: relative;}
+#main_bn{margin: 0 auto; max-width: 1200px; position: relative;}
 #main_bn img{width:100%;height:auto}
 #main_bn .bx-prev{position:absolute;top:50%;z-index:10;left:0;margin-top:-20px;background:url(img/btn_prev.png) no-repeat 50% 50%;width:40px;height:40px;background-size:50%;text-indent:-999px;overflow:hidden;opacity:0.6}
 #main_bn .bx-next{position:absolute;top:50%;z-index:10;right:0;margin-top:-20px;background:url(img/btn_next.png) no-repeat 50% 50%;width:40px;height:40px;background-size:50%;text-indent:-999px;overflow:hidden;opacity:0.6}
