--- a/theme/strawberry/css/mobile_shop.css
+++ b/theme/strawberry/css/mobile_shop.css
@@ -52,7 +52,7 @@ border: 1px solid #558ab7 !important;
 .hd_pops_footer button {margin-right:5px;padding:5px 10px;border:0;background:#393939;color:#fff}
 
 /* 상단 레이아웃 */
-#hd {position:fixed;top:0;left:0;width:100%;z-index:999;height:50px}
+#hd {position:relative;top:0;left:0;width:100%;z-index:999;height:50px}
 #hd h1 {position:absolute;font-size:0;text-indent:-9999em;line-height:0;overflow:hidden}
 #hd_wr{position:relative;margin:0 auto;padding:10px 0;width:100%;zoom:1}
 
@@ -130,7 +130,7 @@ box-shadow: 0 0 5px rgba(55,55,5,0.4);}
 #ppl_word ol .word-rank{display:inline-block;background:#42328a;color:#fff;width:20px;line-height:20px;text-align:center;margin-right:5px}
 
 /* 중간 레이아웃 */
-#container {padding:220px 0 0}
+#container {padding:10px 0 0}
 #container_title {display:none; font-size:1.5em;text-align:center;font-weight:bold;padding:0 0px;font-size:1.25em;line-height:50px;border-bottom:1px solid #ddd;position:relative;background:#fff}
 #container_title a{position:absolute;top:0;left:0;line-height:50px;width:30px;text-align:center;font-size:20px;color:#888}
 /* 내용관리 */
