--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -1,13 +1,11 @@
 @charset "utf-8";
 
-
-
-#gnb {background:#fff;border-bottom:1px solid #d9d9d9;position:relative; border-top: 1px solid #d9d9d9;}
+#gnb {background:#fff;border-bottom:1px solid #d9d9d9;position:relative; border-top: 1px solid #d9d9d9; }
 #gnb h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #gnb button{border:0;background:none;height:50px;width:60px;font-size:15px;border-left:1px solid #e8e8e8;border-right:1px solid #e8e8e8;vertical-align:top;color:#ff0837;}
-#gnb_1dul{margin:0 auto;max-width:100%;position:relative}
+#gnb_1dul{margin:0 auto;max-width:1200px;position:relative}
 #gnb_1dul:after {display:block;visibility:hidden;clear:both;content:""}
-.gnb_1dli {float:left;display:inline-block; word-wrap: break-word;position:relative;vertical-align:top}
+.gnb_1dli {float:left;display:inline-block; word-wrap: break-word;position:relative;vertical-align:top;}
 .gnb_1dli_on {color:#fff;text-decoration:none}
 .gnb_1da {display:block;padding:0 20px;line-height:50px;font-weight:bold;font-size: 16px; color: #333; text-decoration:none;vertical-align:top;}
 .gnb_1da_cat {display:block;padding:0 20px;font-weight:bold;font-size: 16px; color: #333; text-decoration:none;vertical-align:top;}
@@ -44,7 +42,7 @@
 #stv .btn_close{position:absolute;top:0;right:0;width:50px;height:50px;background:none;border:0;color:#ccc;font-size:15px}
 /*메인배너*/
 #main_bn{margin: 0 auto; max-width: 1200px; position: relative;}
-#main_bn img{width:100%;height:auto}
+#main_bn img{width:100%;height:auto; padding: 15px;}
 #main_bn .bx-prev{position:absolute;top:50%;z-index:10;left:0;margin-top:-20px;background:url(img/btn_prev.png) no-repeat 50% 50%;width:40px;height:40px;background-size:50%;text-indent:-999px;overflow:hidden;opacity:0.6}
 #main_bn .bx-next{position:absolute;top:50%;z-index:10;right:0;margin-top:-20px;background:url(img/btn_next.png) no-repeat 50% 50%;width:40px;height:40px;background-size:50%;text-indent:-999px;overflow:hidden;opacity:0.6}
 #main_bn .swiper-pagination-bullet{display:inline-block;margin:2px;opacity:1;width:10px;height:10px;background:#fff;border-radius:5px;text-indent:-999px;overflow:hidden;
@@ -82,19 +80,19 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 #sev .bx-prev {display: inline-block;position: absolute;top: 0;left: 0;width: 30px;height: 30px;margin-top: -40px;border: 1px solid #ddd;text-indent: -999px;overflow: hidden;background: url(img/btn_prev.png) no-repeat 50% 50% #fff;background-size: 20%;}
 #sev .bx-next {display: inline-block;position: absolute;top: 0;right: 0;width: 30px;height: 30px;margin-top: -40px;border: 1px solid #ddd;text-indent: -999px;overflow: hidden;background: url(img/btn_next.png) no-repeat 50% 50% #fff;background-size: 20%;}
 
-.category-menu {display: flex;gap: 5px;margin-bottom: 10px;justify-content: left; overflow-x: auto; /* 가로 스크롤 가능하게 설정 */ white-space: nowrap; /* 한 줄로 나열되도록 설정 */ -webkit-overflow-scrolling: touch; /* iOS에서 부드러운 스크롤 */scrollbar-width: none; /* Firefox에서 스크롤 바 숨기기 */ }
+.category-menu {display: flex;gap: 5px;margin-bottom: 10px;justify-content: center; overflow-x: auto; /* 가로 스크롤 가능하게 설정 */ white-space: nowrap; /* 한 줄로 나열되도록 설정 */ -webkit-overflow-scrolling: touch; /* iOS에서 부드러운 스크롤 */scrollbar-width: none; /* Firefox에서 스크롤 바 숨기기 */ }
 .category-menu::-webkit-scrollbar {display: none;}
 .category-menu button {flex: 0 0 auto; /* 버튼들이 한 줄에 나열되도록 설정 */padding: 8px; font-size: 14px;  border: none;  background: none;  cursor: pointer;}
 .category-menu button.active {color: #8dc63f; /* 초록색 글자 */border-bottom: 2px solid #8dc63f; /* 초록색 밑줄 */font-weight: bold;}
 .category-menu button:hover {background-color: #ddd;}
-.category-content {padding: 10px;display: none;}
+.category-content {padding: 10px;display: none; width: 100%;}
 .category-content.active {display: block;}
 .styled-link {display: block;width: 100%; height: 40px;margin: 15px auto;background: #fff;border: 1px solid #eee;color: #333;font-size: 14px;font-weight: 500;line-height: 38px;text-align: center;}
 
 
-.main_wrap h1 {text-align:left;font-size:38px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
-.main_wrap h2 {text-align:left;font-size:25px;margin:0 0 15px;letter-spacing:-0.1em;line-height:1em; padding: 15px;}
-.main_wrap h3 {text-align:left;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em; color: #f9bb00 ;}
+.main_wrap h1 {text-align:center;font-size:38px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap h2 {text-align:center;font-size:25px;margin:0 0 15px;letter-spacing:-0.1em;line-height:1em; padding: 15px;}
+.main_wrap h3 {text-align:center;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em; color: #f9bb00 ;}
 
 
 /* ##### maint.(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
@@ -699,10 +697,10 @@ background:url(./img/select_bg.png) no-repeat right 50%}
 
 /*실시간 후기 */
 
-.review-list {display: flex;flex-wrap: wrap;gap: 20px;max-width: 1240px; margin: 0 auto;}
-.review-item {padding: 10px; width: 50%; margin: 10px 10px 0 0;}
-.review-thumbnail img {width: 100%; height: auto;}
+.review-list { display: flex;  flex-wrap: wrap;  gap: 20px; max-width: 1240px; /* 전체 컨테이너의 최대 너비 */ margin: 0 auto; justify-content: space-between; /* 여유 공간 균등 분배 */}
+.review-item { padding: 10px;  width: calc(50% - 20px); /* 2개씩 배치. gap 크기를 감안해 20px 차감 */  box-sizing: border-box; /* 패딩 포함 크기 계산 */  margin: 0; /* 추가적인 마진 제거 */}
+.review-thumbnail img { width: 100%;height: auto;}
 .review-details {margin-top: 10px;}
-.review-title {font-weight: bold; margin-bottom: 5px;}
-.review-score {color: #ff9900;  font-size: 14px;}
-.review-author {color: #888;  font-size: 12px;}
+.review-title {font-weight: bold;margin-bottom: 5px;}
+.review-score { color: #ff9900;font-size: 14px;}
+.review-author { color: #888; font-size: 12px;}
