--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -85,7 +85,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .category-menu button {flex: 0 0 auto; /* 버튼들이 한 줄에 나열되도록 설정 */padding: 8px; font-size: 14px;  border: none;  background: none;  cursor: pointer;}
 .category-menu button.active {color: #8dc63f; /* 초록색 글자 */border-bottom: 2px solid #8dc63f; /* 초록색 밑줄 */font-weight: bold;}
 .category-menu button:hover {background-color: #ddd;}
-.category-content {padding: 10px;display: none; width: 100%;}
+.category-content {display:flex;flex-wrap: wrap;  gap: 20px; max-width: 1240px; margin: 0 auto; justify-content: space-between;}
 .category-content.active {display: block;}
 .styled-link {display: block;width: 100%; height: 40px;margin: 15px auto;background: #fff;border: 1px solid #eee;color: #333;font-size: 14px;font-weight: 500;line-height: 38px;text-align: center;}
 
