--- a/theme/strawberry/skin/latest/shop_basic/style.css
+++ b/theme/strawberry/skin/latest/shop_basic/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* 새글 스킨 (latest) */
-.lat {display: none; position:relative;width:1200px;margin:0 auto;line-height:60px}
+.lat {display: block; position:relative;margin:0 auto;line-height:25px}
 .lat:after {display:block;visibility:hidden;clear:both;content:""} 
-.lat .bx-wrapper {float:left;width:1000px;margin:0 0 10px;padding:0;list-style:none;}
+.lat .bx-wrapper {float:left;margin:0 0 10px;padding:0;list-style:none;}
 
 .lat li .fa-heart{color:#ff0000}
 .lat li .new_icon{display:inline-block;padding: 0 3px;line-height:14px ;font-size:0.833em;color:#fff;background:#c56bed}
@@ -14,3 +14,5 @@
 
 
 .lat_more {position:absolute;top:0;right:0;color:#878787;z-index:19}
+
+.wr_date{display: block; float: right;}
