--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -846,3 +846,14 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .review-title {font-weight: bold;margin-bottom: 5px;}
 .review-score {color: #ff9900; font-size: 14px;}
 .review-author { color: #888; font-size: 12px;}
+
+
+/*하단 */
+.footer_list {display: flex;flex-wrap: wrap;gap: 20px;max-width: 1240px;margin: 0 auto;padding: 15px;}
+.footer_div {flex: 1;width: calc(50% - 15px);padding: 30px;border-radius: 8px;border: 1px #ddd solid;box-sizing: border-box;display: inline-block;vertical-align: top;}
+.footer_div h3 {font-size: 20px; letter-spacing: -0.8px; color: #222; line-height: 22px; height: 22px; margin: 0 0 18px; display: flex; align-items: center; /* 아이콘과 텍스트를 수직 정렬 */ gap: 10px; /* 아이콘과 텍스트 간격 */}
+.footer_div p {margin: 5px 0;font-size: 0.95em;color: #555;}
+.footer_div .phone {font-size: 24px;font-weight: 700;color: #00a139;line-height: 1;}
+.footer_div .bank { margin-bottom: 27px; font-size: 0.95em;color: #555;}
+.footer_div .icon-text-group {display: flex;align-items: center;gap: 10px; /* 아이콘과 텍스트 간격 */}
+.footer_div .inline-text-group { display: flex;flex-wrap: wrap;gap: 20px; /* 각 라인 사이 간격 */align-items: center;}
